Make sure overlay covers video-panel footer

--- a/src/app/shared/video-panel/video-panel.component.scss
+++ b/src/app/shared/video-panel/video-panel.component.scss
@@ -36,8 +36,10 @@
 }
 
 .video-panel.video-panel--disabled .video-panel__overlay {
-  background: rgba($black, 0.3) none;
+  background: rgba($white, 0.4) none;
   opacity: 1;
+  z-index: 1;
+  transition: opacity, background-color 100ms;
 }
 
 .controls__input {
